# bbqr-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
bbqr/src/: encoding.rs  file_type.rs  header.rs  join.rs
src/: consts.rs  continuous_join.rs  decode.rs  encode.rs  encoding.rs  error.rs  file_type.rs  header.rs  join.rs  lib.rs  qr.rs  split.rs
tests/: join_test.rs  split_and_join_loop_back_test.rs  split_test.rs  test_data_capacity.py
