[package]
name = "bbqr"
version = "0.3.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["qr-codes"]
qr-codes = ["fast_qr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
thiserror = "1.0.59"

# hex/base32 encoding
data-encoding = "2.6.0"

# base36 encoding
radix_fmt = "1.0.0"

# zlib compression
flate2 = { version ="1.0", features = ["any_zlib", "zlib-ng"], default-features = false }

# generate qr code
fast_qr = { version ="0.12.0", features = ["svg"], optional = true } 

# logging
log = "0.4.21"

[dev-dependencies]
# for testing
rand = "0.8.5"

pretty_assertions = "1.4.0"

